<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">PartyUp! Find your party.</string>
    <string name="app_name">PartyUP</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="LoginBtn">Login</string>
    <string name="SignupBtn">Sign Up</string>
    <string name="LogoutBtn">Log Out</string>
    <string name="Welcome">Welcome!</string>
    <string name="emailHint">exampleemail@youruniversity.edu..</string>


    <!--<string name="hello">Hello World, MainActivity!</string>-->
    <!--<string name="app_name">Create and display a new Activity</string>-->
    <string name="CreatePartyBtn">Create Party</string>
    <string name="CreateParty">Create Party</string>
    <string name="MapViewBtn">Party Map!</string>
    <!--CreatePartyActivity-->
    <string name="Title">Title</string>
    <string name="Date">Date</string>
    <string name="Address">Address</string>
    <string name="Details">Details</string>
    <string name="BYOBBtn">byob</string>
    <string name="title_activity_party_map">PartyMap</string>
    <string name="bruhBtn">bruh</string>
    <string name="partylistView">partylistView</string>
    <string name="ic_launcher.png">myIcon</string>



</resources>
