<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
    <!--android:id="@+id/">-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Title"
        android:id="@+id/txttitle"
        android:autoText="false"
        android:textSize="30sp"
        android:elegantTextHeight="false"
        android:paddingLeft="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/title"
        android:textColor="#ffffff"

        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:background="#649e9eae"
        android:paddingLeft="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Date"
        android:id="@+id/txtdate"
        android:textAlignment="center"
        android:textSize="30sp"
        android:paddingLeft="10dp" />

    <!--DatePicker
        android:layout_width="wrap_content"
        android:layout_height="91dp"
        android:id="@+id/partyDate"
        android:datePickerMode="spinner" /-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/date"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:layout_gravity="center_horizontal"
        android:background="#649e9eae"
        android:paddingLeft="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Address"
        android:id="@+id/txtaddress"
        android:textSize="30sp"
        android:paddingLeft="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/address"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:background="#649e9eae"
        android:textColor="#ffffff"
        android:paddingLeft="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Details"
        android:id="@+id/txtdetails"
        android:textSize="30sp"
        android:paddingLeft="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="121dp"
        android:id="@+id/details"
        android:layout_weight="0.72"
        android:textSize="20sp"
        android:background="#649e9eae"
        android:textColor="#ffffff"
        android:paddingLeft="20dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BYOBBtn"
        android:id="@+id/byob"
        android:checked="true" />

    <Button
        style="@style/Button"
        android:background="@drawable/blue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        android:id="@+id/back"
        android:layout_gravity="center_horizontal"
        android:clickable="true" />

</LinearLayout>